Perform spellchecker setup on creation

BUG: 434173